--- a/_layouts/folder.html
+++ b/_layouts/folder.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ '/music.min.css' | relative_url }}" />
     <link rel="stylesheet" href="{{ '/main.css' | relative_url }}" />
+    <script src="{{ '/assets/js/abc-loader.js' | relative_url }}"></script>
     <title>{{ page.title }} - Нотная библиотека</title>
     <link rel="icon" type="image/jpg" href="{{ '/favicon.png' | relative_url }}"/>
     <style>
